--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.471.0",
     "next": "15.1.4",
-    "next-themes": "^0.4.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
