--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dedent": "^1.5.3",
+    "framer-motion": "^11.17.0",
     "lucide-react": "^0.471.0",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
