--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.18.2",
     "dedent": "^1.5.3",
     "framer-motion": "^11.17.0",
     "lucide-react": "^0.471.0",
