--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-themes": "^0.4.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid4": "^2.0.3"
