--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^1.13.0",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
@@ -20,6 +21,7 @@
     "dedent": "^1.5.3",
     "framer-motion": "^11.17.0",
     "lucide-react": "^0.471.0",
+    "mime": "^4.0.7",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
     "react": "^18.0.0",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/node": "^24.2.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
